# nanodex

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLI_DESIGN.md  CLI_IMPLEMENTATION.md  DATA_INTEGRITY_AUDIT.md  ERROR_DEBUGGING_GUIDE.md  GETTING_STARTED.md  HOW_IT_WORKS.md  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  PHASE1_COMPLETION.md  PHASE1_TODOS.md  PHASE2_COMPLETION.md  PHASE3_COMPLETION.md  PHASE4_COMPLETION.md  PHASE5_COMPLETION.md  PLANNING_SUMMARY.md  README.md  TRAINING_VS_DEPLOYMENT.md  UPDATED_TIMELINE.md  config.example.yaml  config.yaml  demo.py  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  smoke_test.py  test_pydantic_config.py  validate_project.py
config/: brain.yaml  dataset.yaml  extract.yaml  inference.yaml  train_lora.yaml  train_mps.yaml  train_qlora.yaml  train_quick.yaml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  README.md  _config.yml  architecture.md  getting-started.md  how-it-works.md  index.md  training-vs-deployment.md
docs/guides/: configuration.md  debugging.md  deployment.md  training.md
docs/old/: ARCHITECTURE.md  ERROR_DEBUGGING_GUIDE.md  README.md  VISUAL_GUIDE.md
docs/reference/: api.md  cli.md  troubleshooting.md
examples/: __init__.py  demo.py  inference_example.py  ollama_example.py  simple_train.py
nanodex/: __init__.py  __main__.py  config.py
nanodex/analyzers/: __init__.py  ast_parser.py  code_analyzer.py  dependency_graph.py
nanodex/brain/: embedder.py  graph_manager.py  node_typer.py  summarizer.py
nanodex/cli/: __init__.py  analyze.py  chat.py  data_gen.py  educational_commands.py  examples.py  experiments.py  init.py  learn.py  main.py  pipeline.py  rag.py  shell.py  shell_commands.py  status.py  train.py
nanodex/data_generators/: __init__.py  orchestrator.py  self_supervised.py  synthetic_api.py
nanodex/dataset/: qa_generator.py  validators.py
nanodex/evaluation/: __init__.py  metrics.py
nanodex/extractor/: graph_builder.py  schema.sql  tree_sitter_parser.py
nanodex/extractor/queries/: cpp_queries.scm  java_queries.scm  python_queries.scm  typescript_queries.scm
nanodex/inference/: __init__.py  chat.py  client.py  rag_inference.py  server.py
nanodex/models/: model_loader.py
nanodex/rag/: __init__.py  chunker.py  embedder.py  indexer.py  retriever.py
nanodex/trainer/: __init__.py  data_loader.py  trainer.py
nanodex/trainers/: __init__.py  data_preparer.py  model_trainer.py
nanodex/utils/: config.py  educational.py  errors.py  experiment_tracker.py  pipeline_state.py  schemas.py  visualizations.py
scripts/: build_brain.py  embed_summaries.py  extract.py  generate_dataset.py  inspect_graph.py  query.py  query_local.py  serve.py  test_training.py  train.py
tests/: conftest.py  test_basic.py  test_pydantic_config.py  validate_project.py
tests/integration/: test_extraction.py
tests/unit/: test_data_loader.py  test_graph_manager.py  test_inference_config.py  test_node_typer.py  test_qa_generator.py  test_query_client.py  test_summarizer.py  test_training_config.py  test_tree_sitter_parser.py  test_validators.py
turbo_code_gpt/: __init__.py  __main__.py
turbo_code_gpt/analyzers/: code_analyzer.py
turbo_code_gpt/cli/: __init__.py  chat.py  data_gen.py  init.py  main.py  rag.py  train.py
turbo_code_gpt/data_generators/: base.py  self_supervised.py
turbo_code_gpt/evaluation/: evaluator.py  report_generator.py
turbo_code_gpt/inference/: __init__.py  chat.py
turbo_code_gpt/models/: __init__.py  model_loader.py
turbo_code_gpt/trainers/: data_preparer.py  model_trainer.py
turbo_code_gpt/utils/: __init__.py  config.py  schemas.py
